Configuration 설명 추가

--- a/AspNetCore/AspNetCore/AspNetCore.csproj
+++ b/AspNetCore/AspNetCore/AspNetCore.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>ae2e822e-caef-4712-9929-83e330b6a85a</UserSecretsId>
   </PropertyGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
